test_suite/tests/macros/ui/invalid_scope.stderr
error: custom attribute panicked
 --> tests/macros/ui/invalid_scope.rs:3:1
  |
3 | #[provide(scope="invalid_scope")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Invalid scope value: invalid_scope, expected 'singleton' or 'scoped'
