test_suite/tests/macros/ui/invalid_scope.rs
use dilib::provide;

#[provide(scope="invalid_scope")]
fn get_string() -> String {
    "hello".to_string()
}

fn main(){}